Fixed home link alignment in top menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -392,11 +392,6 @@ nav li {
   text-align:right;
 }
 
-nav ul li:first-child
-{
-  margin-right: auto;
-}
-
 #logo {
   background-repeat: no-repeat;
   float: left;
